# GBGO

./: .gitignore  README.md  app.js  compile.bat  index.html  package-lock.json  package.json
public/css/: style.css
public/js/: GBGO_interface.js
src/: CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  GBGO.cpp  GameBoy.cpp  GameBoy.h  Joypad.cpp  Joypad.h  Memory.cpp  Memory.h  Types.h  Utils.h  Video.cpp  Video.h  main.cpp
src/cpu/: CPU_ALU.cpp  CPU_Control.cpp  CPU_Jumps.cpp  CPU_Loads.cpp  CPU_Rotate.cpp  CPU_SingleBit.cpp
src/memory/: MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MemoryChip.h  RomOnly.cpp  RomOnly.h
